--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,9 @@
 		}
 	},
 	"require": {
-		"liftkit/collection": "dev-master"
+		"liftkit/collection": "1.0.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "4.5.*"
-	},
-	"repositories": [
-		{
-			"type": "git",
-			"url": "https://github.com/liftkit/collection"
-		}
-	]
+	}
 }
