--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "liftkit/input",
 	"description": "LiftKit input wrappers",
-	"license": "LGP-2.1",
+	"license": "LGPL-2.1-only",
 	"authors": [
 		{
 			"name": "Ryan Williams",
@@ -16,9 +16,9 @@
 		}
 	},
 	"require": {
-		"liftkit/collection": "1.*"
+		"liftkit/collection": "^1.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "4.5.*"
+		"phpunit/phpunit": "^4.5"
 	}
 }
